# skillset

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PRD.md  README.md  config.example.json  install.sh  release.sh
.ai/skills/test-move/: README.md  SKILL.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
skills/use-skillset/: README.md  SKILL.md
src/: add.rs  config.rs  doc.rs  install.rs  main.rs  path.rs  registry.rs  remove.rs  skills.rs  validate.rs  version_check.rs
