[package]
name = "skillset"
version = "0.2.0"
edition = "2021"
description = "Manage and sync AI agent skills across multiple tools"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
dirs = "5.0"
similar = "2.6"
